# nn_template

./: env.yaml  mkdocs.yml  setup.cfg
.github/workflows/: publish.yml  test_suite.yml
0.0/: 404.html  index.html
0.0/search/: search_index.json
conf/: default.yaml
docs/: index.md
src/nn_template/: run.py
src/nn_template/pl_modules/: pl_module.py
src/nn_template/ui/: run.py
tests/: conftest.py  test_checkpoint.py  test_configuration.py  test_resume.py
